# todo_list

./: .gitignore  IMPLEMENTATION.md  README.md  SCREENSHOTS.md  UV_GUIDE.md  package-lock.json  package.json  start.sh  stop.sh  test_richtext.sh
backend/: .gitignore  LOGGING.md  auth.py  crud.py  database.py  example_script.py  logger.py  main.py  models.py  pyproject.toml  schemas.py  seed_data.py
frontend/: RICHTEXT_EDITOR.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ProtectedRoute.tsx  RichTextEditor.tsx  Sidebar.tsx  TaskBoard.tsx  TaskCard.tsx  TaskDialog.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.ts  index.ts
